# caduceus

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/planning/: delivery-plan.md
hub/: cache.py  config.py  dependencies.py  main.py
hub/connectors/: base.py
hub/models/: common.py
hub/routers/: health.py
tests/: conftest.py  test_cache.py
tests/test_connectors/: test_base.py
tests/test_routers/: test_api_key.py  test_health.py
