[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "caduceus"
version = "1.0.0"
description = "Personal integration hub — aggregates calendar, tasks, email, weather, and AI services"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["hub*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["B008"]  # FastAPI uses function calls in defaults

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aio_pika.*", "apscheduler.*", "google.*", "aioimaplib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hub"]
omit = ["hub/__init__.py"]
